Improve missions UX
